manifests/workload-simulator/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: workload-simulator
spec:
  selector:
    app: workload-simulator
  ports:
    - port: 8080
      targetPort: 8080
