manifests/workload-simulator/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: workload-simulator
spec:
  to:
    kind: Service
    name: workload-simulator
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
